--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -17,8 +17,11 @@
         <slaveListenPort>13900</slaveListenPort>
         <!-- AWS S3 bucket name -->
         <slaveAWSBucketName>upsmart-portrait-audience-analysis</slaveAWSBucketName>
-        <!-- TCP监听数据端口,监听来自master的消息 -->
+        <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
+        <!-- 历史任务文件存放目录 -->
+        <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history/</slaveHistoryLog>
+
 
     </appSettings>
 
