--- a/ad-ausync-server/properties/local/log4j.properties
+++ b/ad-ausync-server/properties/local/log4j.properties
@@ -20,13 +20,5 @@ log4j.appender.R.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%p]-[%t]-[%c
 log4j.logger.org.apache.commons.httpclient=WARN
 log4j.logger.httpclient.wire.header=WARN
 log4j.logger.httpclient.wire.content=WARN
-
-###显示SQL语句部分
-log4j.logger.org.apache.ibatis=INFO
-log4j.logger.com.ibatis=INFO
-log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=INFO
-log4j.logger.com.ibatis.common.jdbc.ScriptRunner=INFO
-log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=INFO
-log4j.logger.java.sql.Connection=INFO
-log4j.logger.java.sql.Statement=INFO
-log4j.logger.java.sql.PreparedStatement=INFO
+log4j.logger.org.apache.http=WARN
+log4j.logger.com.amazonaws=WARN
