--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -19,6 +19,8 @@
         <slaveAWSBucketName>upsmart-portrait-audience-analysis</slaveAWSBucketName>
         <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
+        <!-- AWS S3 目录 -->
+        <slaveAWSAudiencePath>upsmart-prod-audience-data/data/</slaveAWSAudiencePath>
         <!-- 历史任务文件存放目录 -->
         <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history/</slaveHistoryLog>
 
