--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -20,10 +20,11 @@
         <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
         <!-- AWS S3 目录 -->
-        <slaveAWSAudiencePath>upsmart-prod-audience-data/data/</slaveAWSAudiencePath>
+        <slaveAWSAudiencePath>precise</slaveAWSAudiencePath>
         <!-- 历史任务文件存放目录 -->
-        <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history/</slaveHistoryLog>
-
+        <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history</slaveHistoryLog>
+        <!-- 本地S3文件目录 -->
+        <slaveLocalAudiencePath>/home/upsmart/works</slaveLocalAudiencePath>
 
     </appSettings>
 
