--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -42,9 +42,10 @@
 		<add name="PASSWORD" value="" />
         <add name="MAX_IDLE" value="5" />
         <add name="MAX_ACTIVE" value="10" />
-        <add name="DB" value="5" />
+        <add name="DB" value="2" />
         <add name="CONN_TIMEOUT" value="120000" />
         <add name="READ_TIMEOUT" value="60000" />
+        <add name="MAX_REDIRECTIONS" value="5" />
 	</slaveRedis>
 
 </configuration>
