--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -25,6 +25,10 @@
         <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history</slaveHistoryLog>
         <!-- 本地S3文件目录 -->
         <slaveLocalAudiencePath>/home/upsmart/works</slaveLocalAudiencePath>
+        <!-- 批处理块大小 -->
+        <slaveQueueBlockSize>10000</slaveQueueBlockSize>
+        <!-- 批处理线程数 -->
+        <slaveQueueThreadCount>3</slaveQueueThreadCount>
 
     </appSettings>
 
@@ -41,7 +45,7 @@
 		<add name="PORT" value="6379" />
 		<add name="PASSWORD" value="" />
         <add name="MAX_IDLE" value="5" />
-        <add name="MAX_ACTIVE" value="10" />
+        <add name="MAX_ACTIVE" value="50" />
         <add name="DB" value="2" />
         <add name="CONN_TIMEOUT" value="120000" />
         <add name="READ_TIMEOUT" value="60000" />
