--- a/ad-ausync-server/pom.xml
+++ b/ad-ausync-server/pom.xml
@@ -70,7 +70,7 @@
 
         <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk</artifactId>
+            <artifactId>aws-java-sdk-s3</artifactId>
             <version>1.11.99</version>
         </dependency>
 
