--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -7,7 +7,7 @@
         <workModel>slave</workModel>
 
         <!-- http状态端口: master用13700~13799, slave用13800~13899 -->
-        <httpPort>13700</httpPort>
+        <httpPort>13800</httpPort>
 
     <!-- master -->
 
@@ -41,7 +41,7 @@
 
     <!-- slave 需要: 控量数据所在的redis -->
 	<slaveRedis>
-		<add name="IP" value="54.223.181.94" />
+		<add name="IP" value="ups-test-redis3.njt8n6.clustercfg.cnn1.cache.amazonaws.com.cn" />
 		<add name="PORT" value="6379" />
 		<add name="PASSWORD" value="" />
         <add name="MAX_IDLE" value="5" />
