--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -20,7 +20,7 @@
         <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
         <!-- AWS S3 目录 -->
-        <slaveAWSAudiencePath>precise</slaveAWSAudiencePath>
+        <slaveAWSAudiencePath>precise/data</slaveAWSAudiencePath>
         <!-- 历史任务文件存放目录 -->
         <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history</slaveHistoryLog>
         <!-- 本地S3文件目录 -->
