--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -19,8 +19,10 @@
         <slaveAWSBucketName>upsmart-portrait-audience-analysis</slaveAWSBucketName>
         <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
-        <!-- AWS S3 目录 -->
-        <slaveAWSAudiencePath>precise/data</slaveAWSAudiencePath>
+        <!-- AWS audience S3 目录 -->
+        <slaveAWSAudiencePath>precise</slaveAWSAudiencePath>
+        <!-- AWS tag S3 目录 -->
+        <slaveAWSTagPath>tag</slaveAWSTagPath>
         <!-- 历史任务文件存放目录 -->
         <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history</slaveHistoryLog>
         <!-- 本地S3文件目录 -->
@@ -41,12 +43,13 @@
 
     <!-- slave 需要: 控量数据所在的redis -->
 	<slaveRedis>
-		<add name="IP" value="ups-test-redis3.njt8n6.clustercfg.cnn1.cache.amazonaws.com.cn" />
+		<!--<add name="IP" value="ups-test-redis3.njt8n6.clustercfg.cnn1.cache.amazonaws.com.cn" />-->
+		<add name="IP" value="54.223.181.94" />
 		<add name="PORT" value="6379" />
 		<add name="PASSWORD" value="" />
         <add name="MAX_IDLE" value="5" />
         <add name="MAX_ACTIVE" value="50" />
-        <add name="DB" value="2" />
+        <add name="DB" value="4" />
         <add name="CONN_TIMEOUT" value="120000" />
         <add name="READ_TIMEOUT" value="60000" />
         <add name="MAX_REDIRECTIONS" value="5" />
