modify tag struct in audience

--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -27,6 +27,8 @@
         <slaveHistoryLog>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/history</slaveHistoryLog>
         <!-- 本地S3文件目录 -->
         <slaveLocalAudiencePath>/home/upsmart/works</slaveLocalAudiencePath>
+        <!-- tag索引文件 -->
+        <slaveTagIndexPath>/home/upsmart/works/projects/adserver/ad-ausync/ad-ausync-server/properties/local/tagindex</slaveTagIndexPath>
         <!-- 批处理块大小 -->
         <slaveQueueBlockSize>1000</slaveQueueBlockSize>
         <!-- 批处理线程数 -->
