--- a/ad-ausync-server/properties/local/web.config
+++ b/ad-ausync-server/properties/local/web.config
@@ -20,7 +20,7 @@
         <!-- AWS 所在区 -->
         <slaveAWSRegion>cn-north-1</slaveAWSRegion>
         <!-- AWS audience S3 目录 -->
-        <slaveAWSAudiencePath>precise</slaveAWSAudiencePath>
+        <slaveAWSAudiencePath>precise/data</slaveAWSAudiencePath>
         <!-- AWS tag S3 目录 -->
         <slaveAWSTagPath>tag</slaveAWSTagPath>
         <!-- 历史任务文件存放目录 -->
@@ -54,7 +54,7 @@
         <add name="DB" value="4" />
         <add name="CONN_TIMEOUT" value="120000" />
         <add name="READ_TIMEOUT" value="60000" />
-        <add name="MAX_REDIRECTIONS" value="5" />
+        <add name="MAX_REDIRECTIONS" value="7" />
 	</slaveRedis>
 
 </configuration>
